<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/redTextBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#ff4081"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/instruction_txt"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/instruction_header_txt"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/instruction_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/redTextBar"
        android:layout_margin="10dp"
        android:background="#FFFFFF">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/instruction_txt"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_panel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/instruction_panel"
        android:src="@drawable/img1"
        android:scaleType="center"
        />

    <Button
        android:id="@+id/start_btn"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_lb"
        android:textColor="#FFFFFF"
        android:background="#3d4ea9"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:onClick="startButtonClicked"
        />






</RelativeLayout>